# NeuraList

./: .gitignore  CLAUDE_CONTEXT.md  CONTEXT_FOR_CLAUDE.md  PROJECT_STRUCTURE.md  README.md
ml_algorithms/: .clang-format  .gitignore  CLION_SETUP.md  CMakeLists.txt  README.md
ml_algorithms/src/algorithms/: image_processing.cpp  image_processing.h  product_matcher.cpp  product_matcher.h
neuralist_app/: .gitignore  CLEAN_STRUCTURE.md  IOS_DEVELOPMENT.md  PROJECT_STRUCTURE.md  README.md  START_HERE_IOS.md  pubspec.yaml
neuralist_app/ios/Frameworks/: libneuralist_native.dylib
neuralist_app/ios/Runner/: Info.plist
neuralist_app/ios/Runner.xcodeproj/: project.pbxproj
neuralist_app/lib/native/: neuralist_bindings.dart
neuralist_app/lib/services/: image_recognition_service.dart
neuralist_app/native/: CMakeLists.txt  README.md  build_ios.sh
neuralist_app/native/include/: neuralist_native.h
neuralist_app/native/src/: neuralist_native.cpp
neuralist_app/native/src/algorithms/: product_matcher.cpp
neuralist_app/test/: widget_test.dart
scraper/: .env.example  .gitignore  README.md  check_db.py  find_api.py  page_source.html  pipelines.py  requirements.txt  run_scraper.py  run_scraper.sh  scraper.py  scrapy.cfg  test_api.py
scraper/config/: settings.py
scraper/models/: product.py
scraper/spiders/: mercadona_api_spider.py  mercadona_parallel_spider.py  mercadona_sitemap_spider.py  mercadona_spider.py
scraper/utils/: analyze_page.py
